[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-core"
version = "0.1.0"
description = "Minimal Python AI chat core"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "lonelysam3" }]
dependencies = []

[tool.setuptools]
packages = ["ai_chat_core"]
